[gd_scene load_steps=2 format=3 uid="uid://hb6v8ruyyikd"]

[ext_resource type="Script" uid="uid://1224ct4b7upv" path="res://UI/Menues/inventory_stuff/inventory_item.gd" id="1_ikbq8"]

[node name="InventoryItem" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_vertical = 3
script = ExtResource("1_ikbq8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 8.0
offset_bottom = 8.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
expand_mode = 2

[node name="num_items" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Item_name"

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Item_description"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
z_index = 1
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer3"]
layout_mode = 2
mouse_filter = 2

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Drop"

[node name="Button2" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "Use"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/Button" to="." method="_on_button_pressed5"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer3/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer3/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
